ros2_ws/log/build_2025-07-03_13-39-56/paquete/stderr.log
  File "/home/robot/ros2_ws/install/paquete/lib/python3.12/site-packages/paquete/comunicacionROS.py", line 3
    pip install rclpy
        ^^^^^^^
SyntaxError: invalid syntax

